Updated the title and logo favicon

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/jpg" href="/public/logo.jpg" />
+  <link rel="icon" type="image/jpg" href="/logo.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Eduverse</title>
+  <title>Eduverse - Explore the World of Education</title>
 </head>
 
 <body>
